# RustMultiplayerGame

./: Cargo.toml  README.md
accounts_manager/: Cargo.toml
accounts_manager/src/: account.rs  app_data.rs  client.rs  handlers.rs  lib.rs  requests.rs  responses.rs  router.rs  services.rs
accounts_manager/src/testing/: integrations.rs  mod.rs
database_adapter/: Cargo.toml
database_adapter/src/: account.rs  character.rs  lib.rs  test.rs
game_client/: Cargo.toml  README.md
game_client/src/: lib.rs
game_client/src/backend_logic/: mod.rs
game_client/src/gui/: commands.rs  launcher.rs  manager.rs  mod.rs  settings.rs  skins.rs  widgets.rs
game_client/src/gui/views/: launcher.rs  login.rs  mod.rs  server_checking_progress.rs  server_off.rs  server_ok.rs
game_client/src/testing/: integrations.rs  mod.rs
game_server/: Cargo.toml
game_server/src/: client.rs  lib.rs  requests.rs  responses.rs  session.rs
game_server/src/game/: character.rs  entity.rs  math.rs  mod.rs  tile_math.rs  world.rs
game_server/src/game/entity/: mod.rs
game_server/src/game/entity/component/: mod.rs  movement_component.rs  name_component.rs  position_component.rs
game_server/src/game/system/: mod.rs  movement_system.rs  name_system.rs  position_system.rs
game_server/src/testing/: integrations.rs
src/: main.rs
src/gui/: launcher.rs
