[workspace]
resolver = "2"
members = [ "game_client", "game_server", "accounts_manager"]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"]}
thiserror = { version = "2.0.12" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.140"

ctrlc = "3.4.7"