[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }

axum = { version = "0.8.4" }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.2", features = ["trace"] }

ctrlc = { workspace = true }
