[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }

axum = { version = "0.8.4" }
reqwest = { version = "0.12.19", features = ["json"] }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.2", features = ["trace"] }

ctrlc = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }

argon2 = { version = "0.5.3", features = ["alloc", "password-hash", "rand"] }
base64ct = { version = "=1.7.3"}
rand_core = { version = "=0.6.4" , features = ["getrandom"]}

database_adapter = { version = "*", path = "../database_adapter"}
async-trait = { workspace = true }