[package]
name = "database_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { version = "1.0.219", features = ["derive"] }

argon2 = { version = "0.5.3", features = ["alloc", "password-hash", "rand"] }
base64ct = { version = "=1.7.3"}
rand_core = { version = "=0.6.4" , features = ["getrandom"]}