[package]
name = "game_client"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.14"
accounts_manager = { version = "*", path = "../accounts_manager" }

tokio = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }