[package]
name = "game_client"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.14"

tokio = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

database_adapter = { version = "*", path = "../database_adapter"}
accounts_manager = { version = "*", path = "../accounts_manager"}
game_server = { version = "*", path = "../game_server"}