[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

ctrlc = { workspace = true }

database_adapter = { version = "*", path = "../database_adapter"}